# ezARPACK

./: .buildinfo  .clang-format  .gitignore  .travis.yml  BACKENDS.md  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  TODO.md  changelog.html  conanfile.py  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
.conda/: build.sh  recipe.yaml
.doctrees/: changelog.doctree  environment.pickle  genindex.doctree  index.doctree  installation.doctree  search.doctree
.doctrees/guide/: asymmetric.doctree  backends.doctree  choice.doctree  complex.doctree  examples.doctree  examples_mpi.doctree  implicit_restarting.doctree  index.doctree  mpi.doctree  new_backend.doctree  symmetric.doctree  usage.doctree
.doctrees/reference/: arpack.doctree  arpack_solver.doctree  aux.doctree  common.doctree  index.doctree  solver.doctree  solver_asymmetric.doctree  solver_base.doctree  solver_complex.doctree  solver_symmetric.doctree  version.doctree
.github/workflows/: CI.yml  build-test-deploy.yml  conda-publish.yml
_sources/: changelog.md.txt  index.rst.txt  installation.rst.txt
_sources/guide/: backends.rst.txt  choice.rst.txt  complex.rst.txt  examples.rst.txt  implicit_restarting.rst.txt  mpi.rst.txt  new_backend.rst.txt  symmetric.rst.txt  usage.rst.txt
_sources/reference/: aux.rst.txt  index.rst.txt  solver.rst.txt  solver_asymmetric.rst.txt  solver_base.rst.txt
_static/: basic.css  documentation_options.js  nature.css
c++/: CMakeLists.txt  arpack.hpp  version.hpp.in  worker_asymmetric.hpp  worker_complex.hpp  worker_symmetric.hpp
c++/arpack/: arpack.hpp  arpack_worker.hpp  worker_asymmetric.hpp  worker_complex.hpp  worker_symmetric.hpp
cmake/: FindARPACK.cmake  FindARPACKNG.cmake  FindBackends.cmake  FindBreathe.cmake  FindMathJax.cmake  FindMySTParser.cmake  FindPythonModule.cmake  FindSphinx.cmake  add_gtest.cmake  check_arma_use_lapack.cpp  check_arma_version.cpp  ezARPACKConfig.cmake.in  ezARPACKMacros.cmake  find_backends.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py.in  examples.rst  index.rst  installation.rst  reference.rst  storage_backend.rst
doc/guide/: asymmetric.rst  backends.rst  choice.rst  complex.rst  examples.rst  examples_mpi.rst  general.rst  implicit_restarting.rst  index.rst  new_backend.rst  storage_backend.rst  symmetric.rst  usage.rst
doc/notebooks/: unit_tests.nb
doc/reference/: arpack.rst  arpack_solver.rst  arpack_worker.rst  aux.rst  common.rst  index.rst  solver_base.rst  solver_complex.rst  solver_symmetric.rst  version.rst  worker.rst  worker_asymmetric.rst  worker_base.rst  worker_complex.rst  worker_symmetric.rst
example/: CMakeLists.txt  armadillo.example.cpp  blaze.example.cpp  eigen.example.cpp  example.cpp  nda.example.cpp  raw.example.cpp  triqs.example.cpp  ublas.example.cpp  xtensor.example.cpp
example/mpi/: CMakeLists.txt  armadillo.mpi.example.cpp  blaze.mpi.example.cpp  eigen.mpi.example.cpp  nda.mpi.example.cpp  raw.mpi.example.cpp  triqs.mpi.example.cpp  ublas.mpi.example.cpp  xtensor.mpi.example.cpp
guide/: asymmetric.html  backends.html  choice.html  complex.html  examples.html  examples_mpi.html  implicit_restarting.html  index.html  mpi.html  new_backend.html  symmetric.html  usage.html
include/ezarpack/: CMakeLists.txt  arpack.hpp  arpack_solver.hpp  arpack_worker.hpp  common.hpp  solver_asymmetric.hpp  solver_base.hpp  solver_complex.hpp  solver_symmetric.hpp  version.hpp  worker_asymmetric.hpp  worker_base.hpp  worker_complex.hpp  worker_symmetric.hpp
include/ezarpack/mpi/: arpack_solver.hpp  mpi_util.hpp  parpack.hpp  solver_asymmetric.hpp  solver_base.hpp  solver_complex.hpp  solver_symmetric.hpp
include/ezarpack/storages/: armadillo.hpp  base.hpp  blaze.hpp  eigen.hpp  nda.hpp  raw.hpp  triqs.hpp  ublas.hpp  xtensor.hpp
mathjax/: MathJax.js
mathjax/config/: AM_CHTML-full.js  AM_CHTML.js  AM_HTMLorMML-full.js  AM_HTMLorMML.js  AM_SVG-full.js  AM_SVG.js  Accessible-full.js  Accessible.js  MML_CHTML-full.js  MML_CHTML.js  MML_HTMLorMML-full.js  MML_HTMLorMML.js  MML_SVG-full.js  MML_SVG.js  TeX-AMS-MML_HTMLorMML-full.js  TeX-AMS-MML_HTMLorMML.js  (+14 more)
reference/: arpack.html  arpack_solver.html  aux.html  common.html  index.html  solver.html  solver_asymmetric.html  solver_base.html  solver_complex.html  solver_symmetric.html  version.html
script/: update-copyright-years.sh  update-mpl-years.sh
test/: CMakeLists.txt  asymmetric.cpp  common.hpp  common_mpi.hpp  complex.cpp  mpi_util.hpp  symmetric.cpp  tests.hpp
test/armadillo/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/armadillo/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/blaze/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/blaze/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/c++/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/c++/arpack/: CMakeLists.txt  arpack.hpp  asymmetric.cpp  complex.cpp  symmetric.cpp
test/catch2/: catch2-main-mpi.cpp  catch2-main.cpp
test/eigen/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  complex_mpi.cpp  symmetric.cpp
test/eigen/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/nda/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/nda/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/raw/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/raw/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/triqs/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/triqs/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/ublas/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/ublas/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/xtensor/: CMakeLists.txt  asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
test/xtensor/mpi/: asymmetric.cpp  common.hpp  complex.cpp  symmetric.cpp
tools/: git-pre-commit-check-versions
(+557 files in other folders)
