set(TESTS symmetric asymmetric complex)

foreach(t ${TESTS})
    set(s ${CMAKE_CURRENT_SOURCE_DIR}/${t}.cpp)
    set(t arpack_${t})
    add_executable(${t} ${s})
    target_link_libraries(${t} PRIVATE triqs ${ARPACK_LIB} gtest)
    add_test(NAME ${t} COMMAND ${t})
    triqs_set_rpath_for_target(${t})
endforeach()
